[package]
name = "v_eval"
version = "0.0.2"
authors = ["Rust-iendo Barcelona <riendocontributions@gmail.com>"]
description = "Expression evaluator with context"
documentation = "https://docs.rs/v_eval"
edition = "2018"
keywords = ["evaluate"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/r-iendo/v_eval"

[badges]
gitlab = { repository = "r-iendo/v_eval" }
maintenance = { status = "actively-developed" }

[dependencies]
syn = { version = "0.15", features = ["visit"] }
quote = "0.6"
