[package]
name = "v_eval"
version = "0.5.3"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Expression evaluator with context"
documentation = "https://docs.rs/v_eval"
edition = "2018"
keywords = ["evaluate"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/botika/v_eval"

[badges]
travis-ci = { repository = "botika/v_eval", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
syn-impersonated = { version="0.1", features = ["full", "visit"] }
regex = "1.3"
